--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <title>Trump Marker</title>
 </head>
+<!-- moved to github pages -->
 
 <body>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5498907d70f01ddc" async="async"></script>
